# first_course_work

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  reports.json  user_settings.json
src/: main.py  reports.json  reports.py  services.py  utils.py  views.py
tests/: conftest.py  reports.json  test_reports.py  test_services.py  test_utils.py
